Changelog
=========

9.0-dev - (unreleased)
----------------------
* Change: Reference search_rss from portal_url/search_rss only
  [ichimdav refs #17812]
* Change: removed search.pt from eeadesign_cms and eeadesign_public
  [ichimdav refs #17812]
* Change: do not check for related content within 404 pages if the link
  was accessing an RSS page since bots can hit many of these pages
  [ichimdav refs #17812]
* Bug fix: fixed portal_vocabulary templates and actions
  [ghicaale refs #17795]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.design
  [ichimdav #17709]
* Change: depend of eea.icons package for the font icons
  [ichimdav refs #17709]
* Bug fix: show FontAwesome icons for the plone warning classes
  [ichimdav refs #17709]
* Change: changed the default markup of icons to use a span from an i tag
  [ichimdav refs #17708]
* Bug fix: added the empty comments within the icons of cross_site_top
  otherwise the i tags close inline and mess up the layout
  [ichimdav refs #17741]

8.9 - (2013-12-10)
------------------
* Change: Improved documentByLine, added warning message style
  when javascript not available. Improved display of dates.
* Feature: content type label is now visible in documentByLine.
  Which types NOT to show can be configured in ZMI > portal_properties >
  > metatypes_labeling_blacklist, default to not show on ATFolder.

8.8 - (2013-12-10)
------------------
* Change: be backward compatible and allow to use <i>-style-icon
  in portalMessage. Added icon for "open for comments".
  [demarant refs #17684, #17633]
* Change: put the icons directly on the portalMessage classes in order for
  the icons to appear when editing text with TinyMCE
  [ichimdav refs #17633]
* Change: removed EoE link.
  [demarant fixes #17581]
* Change: Improved documentation, accordion, icons and removed old code.
  [demarant refs #17555]
* Feature: added collapsed-by-default and non-exclusive classes for